Fix gap mistakes

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -62,12 +62,11 @@ ul {
 
 .right-side {
   display:flex;
-  gap: 12px;
+  gap: 16px;
 
 }
 
 .left-side{
   display:flex;
-  justify-content: space-around;
 
 }
